--- a/bin/bower.json
+++ b/bin/bower.json
@@ -7,6 +7,8 @@
   ],
   "dependencies": {
     "d3": "~3.5.5",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "gsap": "~1.18.2",
+    "normalize-css": "~4.0.0"
   }
 }
